--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,30 @@ button {
 
 /* *** COMPONENTS *** */
 
+/* Mobile Menu */
+
+.screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    cursor: pointer;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity .6s;
+}
+
+.menu-open .screen {
+    visibility: visible;
+    opacity: 1;
+}
+
+.btn-menu {
+    display: none;
+}
+
 /* Header */
 
 .main-header {
@@ -72,12 +96,24 @@ button {
     font-size: 40px;
 }
 
+.btn-menu {
+    display: none;
+}
+
+.main-nav .quit-menu {
+    visibility: hidden;
+}
+
 .main-nav li {
     background-color: #f3f3f3;
     width: 150px;
     display: flex;
     justify-content: center;
     padding: 5px;
+}
+
+.main-nav a:hover {
+    color: rgb(73, 160, 157);
 }
 
 .main-nav .active {
@@ -280,6 +316,60 @@ button {
     }
 }
 
+@media (max-width: 740px) {
+
+    .btn-menu {
+        background: url("../img/menu.png");
+        width: 24px;
+        height: 24px;
+        display: inline-block;
+        cursor: pointer;
+        border: none;
+    }
+
+    .main-nav {
+        position: fixed;
+        top: 0;
+        right: 0;
+        flex-direction: column;
+        height: 100vh;
+        background-color: black;
+        width: 200px;
+        transform: translateX(105%);
+        transition: transform .6s;
+        box-shadow: -4px 0px 5px 0px rgba(0, 0, 0, 0.5);
+    }
+
+    .main-nav li {
+        background-color: transparent;
+        width: unset;
+        justify-content: flex-start;
+    }
+
+    .main-nav li a {
+        color: white;
+    }
+    
+    .menu-open .main-nav {
+        transform: translateX(0);
+    }
+    
+    .main-nav .quit-menu {
+        visibility: visible;
+        margin: 7px;
+        background: none;
+    }
+
+    .quit-menu button {
+        background: url("../img/quit.png");
+        width: 24px;
+        height: 24px;
+        border: none;
+        cursor: pointer;
+    }
+
+}
+
 @media (max-width: 660px) {
     .main-container {
         padding: 10px;
@@ -312,7 +402,7 @@ button {
     height: 100%;
 }
 
-.screen {
+.modal-screen {
     background-color: black;
     width: 100%;
     height: 100%;
