--- a/css/main.css
+++ b/css/main.css
@@ -579,13 +579,13 @@ button {
     display: none;
     position: absolute;
     height: 40px;
-    width: 50%;
+    width: 500px;
     left: 0px; /**/
     top: 0px; /**/
 }
 
 .inline-input input {
-    background-color: transparent;
+    background-color: rgba(255, 0, 0, 0.2);
     outline: rgba(23, 31, 45, 1);
     border: none;
     width: 100%;
@@ -594,6 +594,5 @@ button {
     color: rgb(255, 255, 255);
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 40px;
-    padding: 0 10px;
     text-align: center;
 }
